# sleeper-py

./: README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
sleeper_py/: __init__.py  sleeper_avatars.py  sleeper_drafts.py  sleeper_leagues.py  sleeper_players.py  sleeper_stats.py  sleeper_user.py
sleeperpy/: __init__.py  avatars.py  drafts.py  leagues.py  players.py  user.py
test/: test_avatars.py  test_drafts.py  test_leagues.py  test_players.py  test_user.py
