# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel", "requests"]
build-backend = "setuptools.build_meta"

[project]
name = "sleeper-py"
version = "0.1.0"
description = "A Python implementation of the Sleeper API."
readme = "README.md"
authors = [{ name = "Adam Curtis", email = "adamcurtisvt@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["Sleeper", "API", "Fantasy Football"]
dependencies = [
    "requests >= 2.28.1"
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/AdamCurtisVT/sleeper-py"
